@@ -33,6 +33,7 @@
 #include "PageGroup.h"
 #include "Settings.h"
 #include "TextTrackList.h"
+#include "UserContentController.h"
 #include "UserStyleSheetTypes.h"
 
 namespace WebCore {
@@ -239,14 +240,22 @@ void CaptionUserPreferences::updateCaptionStyleSheetOveride()
     // Identify our override style sheet with a unique URL - a new scheme and a UUID.
     DEPRECATED_DEFINE_STATIC_LOCAL(URL, captionsStyleSheetURL, (ParsedURLString, "user-captions-override:01F6AF12-C3B0-4F70-AF5E-A3E00234DC23"));
 
-    m_pageGroup.removeUserStyleSheetFromWorld(mainThreadNormalWorld(), captionsStyleSheetURL);
+    auto& pages = m_pageGroup.pages();
+    for (auto& page : pages) {
+        if (auto* pageUserContentController = page->userContentController())
+            pageUserContentController->removeUserStyleSheet(mainThreadNormalWorld(), captionsStyleSheetURL);
+    }
 
     String captionsOverrideStyleSheet = captionsStyleSheetOverride();
     if (captionsOverrideStyleSheet.isEmpty())
         return;
 
-    m_pageGroup.addUserStyleSheetToWorld(mainThreadNormalWorld(), captionsOverrideStyleSheet, captionsStyleSheetURL, Vector<String>(),
-        Vector<String>(), InjectInAllFrames, UserStyleAuthorLevel, InjectInExistingDocuments);
+    for (auto& page : pages) {
+        if (auto* pageUserContentController = page->userContentController()) {
+            auto userStyleSheet = std::make_unique<UserStyleSheet>(captionsOverrideStyleSheet, captionsStyleSheetURL, Vector<String>(), Vector<String>(), InjectInAllFrames, UserStyleAuthorLevel);
+            pageUserContentController->addUserStyleSheet(mainThreadNormalWorld(), std::move(userStyleSheet), InjectInExistingDocuments);
+        }
+    }
 }
 
 String CaptionUserPreferences::primaryAudioTrackLanguageOverride() const
