@@ -1,3 +1,15 @@
+2014-07-08  Eric Carlson  <eric.carlson@apple.com>
+
+        [iOS] user caption preferences not applied
+        https://bugs.webkit.org/show_bug.cgi?id=134599
+
+        Reviewed by Sam Weinig.
+
+        * page/CaptionUserPreferences.cpp:
+        (WebCore::CaptionUserPreferences::updateCaptionStyleSheetOveride): All Pages in a PageGroup
+        do not necessarily use the same PageUserContentController, so apply and remove caption user
+        the style sheet directly to each page rather than to the page group.
+
 2014-07-08  Commit Queue  <commit-queue@webkit.org>
 
         Unreviewed, rolling out r170894.
